# policy_chat_bot

./: Dockerfile  README.md  architecture.md  config.py  diagram.py  docker-compose.yml  main.py  pyproject.toml  run.py
faiss_index/: index.faiss  index.pkl
faiss_index_structural/: index.faiss  index.pkl
graph/: graph.py  state.py
graph/nodes/: cache_store.py  context_retrieval.py  execution.py  output_validation.py  query_intelligence.py  safety_gate.py  session_memory.py
ingestion/: build_index.py  chunk_doc.py  chunk_structural.py  dump_blocks.py  parse_doc.py
ingestion/dataset/: all_chunks.txt  blocks.txt  chunks.json  chunks.txt  extracted.txt  parsed.json  parsed.md  semantic_test.txt
ingestion/faiss_index_structural/: index.faiss  index.pkl
metrics/: completeness.py  faithfulness.py
middleware/: auth.py  input_guard.py
prompts/v1/: faithfulness_judge.txt  generation.txt  query_intelligence.txt
resilience/: breakers.py
