[project]
name = "policy-bot-rag"
version = "0.1.0"
description = "Policy support bot using hybrid (BM25 + FAISS) retrieval with cross-encoder reranking."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # Rate limiting
    "slowapi>=0.1.9",

    # LangChain / LangGraph
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-groq>=0.1.6",
    "langchain-huggingface>=0.0.3",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "psycopg-pool>=3.2.0",

    # LLM provider
    "groq>=0.9.0",

    # Retrieval: hybrid BM25 + dense FAISS + cross-encoder rerank
    "faiss-cpu>=1.7.4",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=2.7.0",

    # Semantic cache
    "gptcache>=0.1.44",
    "openai==0.28.1",
    "onnxruntime>=1.17.0",
    "transformers>=4.30.0",
    "torch>=2.1.0",
    "sqlalchemy>=2.0.0",

    # LangSmith (observability)
    "langsmith>=0.1.0",

    # Safety: PII scrubbing
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.7.0",

    # Resilience
    "tenacity>=8.2.0",
    "pybreaker>=1.2.0",

    # HTTP client
    "httpx>=0.27.0",

    # Logging
    "structlog>=24.0.0",

    # env file loading
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
ingest = [
    # Layout-aware PDF parsing (headers, paragraphs, tables, lists, page nums)
    "docling>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "graph",
    "metrics",
    "middleware",
    "observability",
    "resilience",
]
